--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 95vh;
+  background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
